fixed layout bug in Qualification component

--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -1,6 +1,5 @@
 .qualification-container {
   margin: 0 auto;
-  max-width: 768px;
 }
 
 .qualification-tabs {
@@ -92,8 +91,8 @@
 /* For large devices */
 @media screen and (max-width: 992px) {
   .qualification-container {
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5); */
   }
 }
 
